<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.curso.appcontactos.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/margenSupApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilNombreLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFormNombre"
            android:textSize="@dimen/tiGeneral"
            android:layout_marginTop="@dimen/margenTituloSup"
            android:layout_marginLeft="@dimen/margenTituloIzq"
            android:layout_marginRight="@dimen/margenTituloDch" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvFechaTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvFechaNacimiento"
        android:textSize="@dimen/tvfecha"
        android:layout_marginLeft="@dimen/margenFechaIzq"
        android:layout_marginRight="@dimen/margenTituloDch"
        android:layout_marginTop="@dimen/margenTituloSup"
        android:textColor="@color/tituloFecha"
        android:layout_below="@+id/tilNombreLayout"/>

    <DatePicker
        android:id="@+id/dpFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFechaTitulo"
        android:datePickerMode="spinner"
        android:calendarViewShown="false">
    </DatePicker>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTelefonoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dpFecha">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFormTelefono"
            android:textSize="@dimen/tiGeneral"

            android:layout_marginLeft="@dimen/margenTituloIzq"
            android:layout_marginRight="@dimen/margenTituloDch" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilTelefonoLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFormEmail"
            android:textSize="@dimen/tiGeneral"
            android:layout_marginTop="@dimen/margenTituloSup"
            android:layout_marginLeft="@dimen/margenTituloIzq"
            android:layout_marginRight="@dimen/margenTituloDch" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescripcionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmailLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tilDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFormDescripcion"
            android:textSize="@dimen/tiGeneral"
            android:layout_marginTop="@dimen/margenTituloSup"
            android:layout_marginLeft="@dimen/margenTituloIzq"
            android:layout_marginRight="@dimen/margenTituloDch" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
